--- a/tuan3.html
+++ b/tuan3.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="tuan3.css">
 </head>
 <body>
-    <h1 style="text-align: center; width: auto; height: auto;" >W3school.com</h1>
+    <h1 style="text-align: center; width: auto; height: auto;"> W3school.<span style="color: green;">com</span></h1>
+    
     <h2 style="text-align: center;">THE WOELD'S LARHEST WEB DEVELOPER SITE</h2><br>
     <div id="main">
         <div id="header">
